--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "akihabara"]
 	path = akihabara
-	url = git://github.com/Akihabara/Akihabara.git
+	url = git://github.com/Akihabara/akihabara.git
